cleaning the house

--- a/uteg/programacion3/WebApplication/web/bootstrap/template.html
+++ b/uteg/programacion3/WebApplication/web/bootstrap/template.html
@@ -1,12 +1,4 @@
-<%-- 
-    Document   : employee_form
-    Created on : Mar 7, 2019, 12:58:56 AM
-    Author     : hiperezr
---%>
-
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -19,9 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-
-      
-
+    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
